# zero-trust-api-starter

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: audit-schema.md  misuse-catalog.md  sequence-diagram.mmd  threat-model.md
infra/: docker-compose.yml
infra/opa/: data.json  policy.rego
infra/postgres/: init.sql
src/api/: audit.py  auth.py  db.py  main.py  opa_client.py
src/tests/: test_authz_batch2.py  test_authz_batch3.py  test_authz_negative_batch1.py  test_smoke.py
