[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-trust-api-starterkit"
version = "0.1.0"
description = "Multi-tenant zero-trust API starter kit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
